...
    }
}

extension Project {
    static func starter() -> Project {
        Project(
            name: "Starter Project",
            resources: [
                Resource(
                    name: "Web",
                    payload: .browserWindow(
                        BrowserWindow(tabs: ["https://apple.com", "https://ibm.com"])
                    )
                ),
                Resource(
                    name: "Home Terminal",
                    payload: .terminalSession(TerminalSession(workingDirectory: "~/"))
                ),
                Resource(
                    name: "Home Folder",
                    payload: .finderWindow(FinderWindow(folder: "~/"))
                )
            ]
        )
    }

...
